{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 170,
  "lineage": "c212c143-c61a-4996-acf6-e403fe5b4f64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07045bfe1bab353dc",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0c9e16b08244db71a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9e16b08244db71a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng84devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04cdaf38308a7dc15",
            "private_dns": "ip-30-0-30-159.eu-west-1.compute.internal",
            "private_ip": "30.0.30.159",
            "public_ip": "3.250.60.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0484fa70f490e3846",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b86ea0c844fa5663",
            "tags": {
              "Name": "eng84_ula_terraform_db"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04fd7bc17161e5d7b"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_for_vpc_private",
            "aws_vpc.terraform_vpc",
            "aws_security_group.terraform_db_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fef271f53d5912fe",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0509115e27c0993c2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0509115e27c0993c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng84devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c173c08ccbe8f20e",
            "private_dns": "ip-30-0-1-235.eu-west-1.compute.internal",
            "private_ip": "30.0.1.235",
            "public_ip": "3.249.252.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a47e4c51de7e3b56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a09f0caf92cc0d9e",
            "tags": {
              "Name": "eng84_ula_terraform_web"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c31154213be41deb"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_webapp_sg",
            "aws_subnet.subnet_for_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-09d64b604576f9a47",
            "id": "igw-09d64b604576f9a47",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng84_ula_terraform_ig"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_ig"
            },
            "vpc_id": "vpc-029ae05ce5893466d"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0860f8a0ee46b765e",
            "id": "rtb-0860f8a0ee46b765e",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eng84_ula_terraform_private_rt"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_private_rt"
            },
            "vpc_id": "vpc-029ae05ce5893466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0b644b854392311c7",
            "id": "rtb-0b644b854392311c7",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d64b604576f9a47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng84_ula_terraform_public_rt"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_public_rt"
            },
            "vpc_id": "vpc-029ae05ce5893466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_ig",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5491bcd1b9c007b",
            "route_table_id": "rtb-0860f8a0ee46b765e",
            "subnet_id": "subnet-0b86ea0c844fa5663"
          },
          "dependencies": [
            "aws_route_table.terraform_private_rt",
            "aws_subnet.subnet_for_vpc_private",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a61e31544514dd4",
            "route_table_id": "rtb-0b644b854392311c7",
            "subnet_id": "subnet-0a09f0caf92cc0d9e"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_ig",
            "aws_route_table.terraform_public_rt",
            "aws_subnet.subnet_for_vpc",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-04fd7bc17161e5d7b",
            "description": "Private security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fd7bc17161e5d7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "94.0.131.111/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eng84_ula_terraform_db_sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029ae05ce5893466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_webapp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0c31154213be41deb",
            "description": "Security group for the webapp ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c31154213be41deb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from the browser",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "94.0.131.111/32"
                ],
                "description": "Allow admin to SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eng84_ula_terraform_web_sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eng84_ula_terraform_web_sg"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029ae05ce5893466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "priv_vpc_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2130688456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04fd7bc17161e5d7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_db_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_for_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0a09f0caf92cc0d9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "30.0.1.0/24",
            "id": "subnet-0a09f0caf92cc0d9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng84_ula_terraform_subnet"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_subnet"
            },
            "vpc_id": "vpc-029ae05ce5893466d"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_for_vpc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b86ea0c844fa5663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "30.0.30.0/24",
            "id": "subnet-0b86ea0c844fa5663",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng84_ula_terraform_private_subnet"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_private_subnet"
            },
            "vpc_id": "vpc-029ae05ce5893466d"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-029ae05ce5893466d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0a17f7ca10462aea2",
            "default_route_table_id": "rtb-0432281f6953123aa",
            "default_security_group_id": "sg-089b003b81487ddb2",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-029ae05ce5893466d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0432281f6953123aa",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng84_ula_terraform_vpc"
            },
            "tags_all": {
              "Name": "eng84_ula_terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}